Re #58 Fix co2 axis years cropped

--- a/assets/app.less
+++ b/assets/app.less
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5 {
 .co2-card {
 
   .header {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     color: dimgrey;
   }
